--- a/scroll.html
+++ b/scroll.html
@@ -11,7 +11,9 @@
 <div id="box"></div>
     </div>
     <div id="page2">
-        <div id="box"></div>
+        <div id="box">
+           
+        </div>
     </div>
     <div id="page3">
         <div id="box"></div>
